# meowone

./: .env.docker  .env.example  .env.production  .gitignore  A2A协议介绍.md  README.md  agent skill介绍.md  agents.yaml  decorator_flow.drawio  docker-compose.prod.yml  docker-compose.yml  quote_scraper.py  start.bat  start.sh  uv.toml  上线.json  启动指引.md  回滚.json  团队创建指引.md
.meowone/: AGENTS.md  (+6 more)
agents/doc-assistant/: __main__.py  agent_executor.py  llm.py  pyproject.toml
backend_v2/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  uv.toml
backend_v2/app/: agents_config.py  app_factory.py  config.py  config_loaders.py  main.py
backend_v2/app/a2a/: client.py
backend_v2/app/agents/: a2a_client.py  builder.py  caller.py  runtime.py
backend_v2/app/api/: __init__.py  agent_executions.py  agents.py  capability_management.py  chat.py  gateway.py  internal_agents.py  messages.py  model_management.py  openai.py  prompt_management.py  router.py  scheduled_tasks.py  tasks.py  v3_images.py  workflows.py
backend_v2/app/bootstrap/: __init__.py  capabilities.py  lifespan.py
backend_v2/app/capability/: base.py  registry.py  tool_base.py
backend_v2/app/core/: runtime_container.py
backend_v2/app/db/: connection.py  database.py
backend_v2/app/dispatch/: context.py  gateway.py  registry.py
backend_v2/app/gateway/: turn_service.py
backend_v2/app/llm/: client.py  prompt_builder.py
backend_v2/app/loop/: context.py  engine.py  events.py  input.py  registry.py  runtime.py  tool_executor.py
backend_v2/app/models/: gateway.py  message.py  openai.py  session.py
(+355 files in other folders)
