[project]
name = "backend-v2"
version = "0.2.0"
description = "MeowOne AI Agent Platform Backend v2"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "httpx==0.28.1",
    "aiosqlite==0.21.0",
    "python-dotenv==1.1.0",
    "pydantic==2.11.3",
    "sse-starlette==2.3.3",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []
